# Python-for-ML

./: README.md  asset  demo1.py  dict.py  function.py  list-methd.py  list.py  loop.py  program2.py  program3.py  program4.py  scop  tupple.py
Python-For-ML/: intro
basic.py/: binaryfile.py  demo1.py  dict.py  exception.py  file.py  filetxt.txt  for_loop.py  forloop.py  function2.py  info.py  intro.py  list-methd.py  list.py  loops.py  match.py  math_fun.py  oops.py  oprator.py  os_module.py  os_module2.py  practic3.py  practice.py  practice.txt  practicefile.py  program1.py  program2.py  program3.py  program4.py  read.py  recursion.py  sample.txt  set.py  text1.txt  text2  text2.txt  write.py
envtools/: conda.txt  pip.txt  pipenv.txt  poetrytxt  venv.txt  virtual_env.txt  virtualenv.txt
filehandling/: functoos_pra.py  itertool_prac.py  pathlib_prac.py  practice.py  random_prac.py  sysmodule.py
myproject/: pyproject.toml
oops/: abstraction.py  encapsulation.py  opps.py  optroverload.py  polymorphsim.py  practice.py
tinyproject/: animalsound.py
tinyproject/animals/: cat.py  dog.py  flderdetail.txt
