[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Abid-Shabbir05",email = "abid.mlmind@gmail.come"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
